--- a/app/src/main/res/anim/anim_dialog_dismiss.xml
+++ b/app/src/main/res/anim/anim_dialog_dismiss.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
     <scale
-        android:duration = "700"
+        android:duration = "@android:integer/config_shortAnimTime"
         android:fromXScale = "1"
         android:toXScale = "0"
         android:fromYScale = "1"
