--- a/app/src/main/res/anim/anim_dialog_show.xml
+++ b/app/src/main/res/anim/anim_dialog_show.xml
@@ -2,7 +2,7 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
 
     <scale
-        android:duration = "900"
+        android:duration = "@android:integer/config_shortAnimTime"
         android:fromXScale = "0"
         android:toXScale = "1"
         android:fromYScale = "0"
