--- a/app/src/main/res/layout/activity_detail_bill.xml
+++ b/app/src/main/res/layout/activity_detail_bill.xml
@@ -204,7 +204,7 @@
                 tools:ignore="HardcodedText" />
         </RelativeLayout>
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_print_bill"
             style="@style/MyButton"
             android:layout_width="wrap_content"
