--- a/app/src/main/res/layout/spinner_dropdown_item.xml
+++ b/app/src/main/res/layout/spinner_dropdown_item.xml
@@ -1,11 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textColor="@color/dark_text"
-    android:textSize="@dimen/text_normal"
-    android:ellipsize="end"
-    android:maxLines="1"
-    android:background="@color/light_card"
-    android:padding="10dp">
-</TextView>
+    android:padding="10dp"
+    android:background="@color/light_card">
+    <TextView
+        android:id="@+id/txt_drugstore_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/ic"
+        android:layout_alignBottom="@+id/ic"
+        android:layout_alignTop="@+id/ic"
+        android:gravity="center_vertical"
+        android:layout_marginStart="5dp"
+        android:textColor="@color/dark_text"
+        android:textSize="@dimen/text_normal"
+        android:ellipsize="end"
+        android:maxLines="1"/>
+    <ImageView
+        android:id="@+id/ic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_drugstore"
+        android:layout_alignParentStart="true"/>
+</RelativeLayout>
