--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/txt_drugstore_name"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:textColor="@color/dark_text"
-    android:textSize="@dimen/text_normal"
-    android:padding="5dp"
-    android:maxLines="1"
-    android:ellipsize="end">
-</TextView>
+    android:layout_height="wrap_content">
+    <TextView
+        android:id="@+id/txt_drugstore_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/dark_text"
+        android:layout_toEndOf="@+id/ic"
+        android:textSize="@dimen/text_normal"
+        android:padding="5dp"
+        android:maxLines="1"
+        android:ellipsize="end"/>
+    <ImageView
+        android:id="@+id/ic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_drugstore"
+        android:layout_alignParentStart="true"/>
+</RelativeLayout>
